<resources>
    <string name="app_name">liveCalc</string>
    <string name="clear">Clear</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="sub">−</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="equal">=</string>
    <string name="dot">•</string>
    <string name="mod">mod</string>
    <string name="c">C</string>
    <string name="b1">(</string>
    <string name="b2">)</string>
    <string name="pow">^</string>

    <string name="gcd">gcd</string>
    <string name="lcm">lcm</string>
    <string name="sqrt">sqrt</string>
    <string name="factorial">!</string>
    <string name="pi">π</string>

    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="log">log</string>
    <string name="e">e</string>

    <string name="deg">deg</string>
    <string name="rad">rad</string>
    <string name="ac">AC</string>

</resources>