<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/equation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        android:text=""
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textAlignment="viewEnd"
        android:paddingBottom="15dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:gravity="bottom"
        android:maxLines="4"
        android:layout_weight="3">
    </TextView>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        android:text=""
        android:textColor="@color/gray"
        android:textSize="50sp"
        android:textAlignment="viewEnd"
        android:padding="10dp"
        android:gravity="bottom"
        android:maxLines="1"
        android:layout_weight="1">
    </TextView>

    <LinearLayout
        android:layout_weight="6"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_width="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/bac"
                        android:text="@string/ac"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/orange"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </Button>
                    <Button
                        android:id="@+id/bc"
                        android:text="@string/c"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/orange"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </Button>
                    <Button
                        android:id="@+id/bb1"
                        android:text="@string/b1"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/orange"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </Button>
                    <Button
                        android:id="@+id/bb2"
                        android:text="@string/b2"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/orange"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </Button>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/bseven"
                        android:text="@string/seven"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </Button>
                    <Button
                        android:id="@+id/beight"
                        android:text="@string/eight"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </Button>
                    <Button
                        android:id="@+id/bnine"
                        android:text="@string/nine"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </Button>
                    <Button
                        android:id="@+id/bdivide"
                        android:text="@string/divide"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/orange"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </Button>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/bfour"
                        android:text="@string/four"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </Button>
                    <Button
                        android:id="@+id/bfive"
                        android:text="@string/five"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </Button>
                    <Button
                        android:id="@+id/bsix"
                        android:text="@string/six"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </Button>
                    <Button
                        android:id="@+id/bmultiply"
                        android:text="@string/multiply"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/orange"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </Button>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/bone"
                        android:text="@string/one"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </Button>
                    <Button
                        android:id="@+id/btwo"
                        android:text="@string/two"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </Button>
                    <Button
                        android:id="@+id/bthree"
                        android:text="@string/three"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </Button>
                    <Button
                        android:id="@+id/bsub"
                        android:text="@string/sub"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/orange"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </Button>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/bdot"
                        android:text="@string/dot"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </Button>
                    <Button
                        android:id="@+id/bzero"
                        android:text="@string/zero"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </Button>
                    <Button
                        android:id="@+id/bequal"
                        android:text="@string/equal"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/orange"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </Button>
                    <Button
                        android:id="@+id/badd"
                        android:text="@string/add"
                        android:textSize="30sp"
                        android:background="@color/black"
                        android:textColor="@color/orange"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    </Button>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>